--- a/frontend/src/StudentHome.css
+++ b/frontend/src/StudentHome.css
@@ -4,3 +4,11 @@ background-clip: text;
 -webkit-background-clip: text;
 background-image: linear-gradient(to right, #424241, #000000);
 } */
+@media (max-width:530px) {
+.digital5{
+    display: none;
+}
+.Students15k{
+    display: none;
+}
+}
