--- a/frontend/src/TeacherHome.css
+++ b/frontend/src/TeacherHome.css
@@ -1,3 +1,14 @@
-@media(max-width:"530px"){
-    
+@media (max-width:530px) {
+.teachingTools{
+    display: none;
+}
+.studentEnag{
+    display: none;
+}
+.orangeCircle{
+    display:none;
+}
+.circularText{
+    display: none;
+}
 }
